--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ classifiers = [
 ]
 
 dependencies = [
-    "torch>=2.5.1,<2.6.0",
-    "torchvision>=0.20.1,<0.21.0",
+    "torch==2.7.1",
+    "torchvision>=0.22.1,<0.23.0",
     "numpy",
     "pillow",
     "scipy",
